--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,10 +1,17 @@
 input,textarea{
     border: 2px solid blue;
+    width: 500px;
+    height: 40px;
 }
 
 button{
   background-color: plum;
 }
+.text-center{
+    font-size: large;
+    color: royalblue;
+    font-family: 'Yesteryear', cursive, serif;
 
+}
 
   
