--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -8,10 +8,10 @@ button{
   background-color: plum;
 }
 .text-center{
-    font-size: large;
-    color: royalblue;
-    font-family: 'Yesteryear', cursive, serif;
-
+    font-size: larger;
+    color: black;
+    font-weight: bold;
+    font-family: 'Architects Daughter', cursive;
 }
 .formaction{
   background-color: silver;
