added an upvote button in quote-details.component.html

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,3 +1,4 @@
 <small> {{ quote.author }} | {{ quote.date }} </small>  <br>
 
 <button (click)="delete(true)" class="btn">Delete quote</button>
+<button (click)="vote(true)"   class="btn">Upvote</button>
