--- a/src/app/quote-details/quote-details.component.css
+++ b/src/app/quote-details/quote-details.component.css
@@ -1,5 +1,25 @@
 button{
-    background-color: cornflowerblue;
+    background-color: pink;
     color: black;
     font-size: 20px;
+    width: auto;
+    height: 50px;
+    margin: 10px;
 }
+ #like{
+    background-color:cornflowerblue;
+    color: black;
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+
+ }
+ #dislike{
+    background-color: red;
+    color: black;
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+    margin: 10px;
+    float: right;
+ }
