--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,4 +1,6 @@
-<small> {{ quote.author }} | {{ quote.date }} </small>  <br>
+<!-- <small> {{ quote.author }} | {{ quote.date }} </small>  <br> -->
 
-<button (click)="delete(true)" class="btn">Delete quote</button>
-<button (click)="vote(true)"   class="btn">Upvote</button>
+<button class="btn btn-sm btn-success" (click)='upvote()'>{{quote.likes}} <i class="fa fa-thumbs-up" id="like"></i></button> <br>
+<button class="btn btn-sm hate" id="hate" (click)='downvote()'>{{quote.dislikes}} <i class="fa fa-thumbs-down" id="dislike"></i></button><br>
+<button (click)="delete(true)" class="btn">Delete quote</button> 
+
