made some changes

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,6 +1,6 @@
-<p> {{ quote.author }} , {{ quote.date }} </p>
+<!-- <p> {{ quote.author }} , {{ quote.date }} </p> -->
 
-<button class="btn btn-sm btn-success" (click)='upvote()'>{{quote.likes}} <i class="fa fa-thumbs-up" id="like"></i></button> <br>
-<button class="btn btn-sm hate" (click)='downvote()'>{{quote.dislikes}} <i class="fa fa-thumbs-down" id="dislike"></i></button><br>
+<!-- <button class="btn btn-sm btn-success" (click)='upvote()'>{{ quote.likes }} <i class="fa fa-thumbs-up" id="like"></i></button> <br>
+<button class="btn btn-sm hate" (click)='downvote()'>{{ quote.dislikes }} <i class="fa fa-thumbs-down" id="dislike"></i></button><br> -->
 <button (click)="delete(true)" class="btn">Delete quote</button>
 
