--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,4 +1,4 @@
-<!-- <p> {{ quote.author }} , {{ quote.date }} </p> -->
+<p> {{ quote.author }} , {{ quote.date }} </p>
 
 <button class="btn btn-sm btn-success" (click)='upvotes()'>{{ quote.likes }} <i class="fa fa-thumbs-up" id="like"></i></button> 
 <button class="btn btn-sm hate" (click)='downvotes()' > {{ quote.dislikes }} <i class="fa fa-thumbs-down" id="dislike"></i></button><br>
