--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -8,17 +8,17 @@
             <form (ngSubmit)="submitQuote()">
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" required class="form-control"  [(ngModel)]="formName" id="name" >
+                    <input type="text" required class="form-control"  [(ngModel)]="formName"name="name" id="name" >
                 </div>
         
                 <div class="form-group">
                     <label for="quote">Quote</label>
-                    <textarea class="form-control"   [(ngModel)]="formQuote" id="quote"required></textarea>
+                    <textarea class="form-control"   [(ngModel)]="formQuote" id="quote" name="quote" required></textarea>
                 </div>
         
                 <div class="form-group">
                     <label for="author">Author</label>
-                    <textarea class="form-control" id="author"  [(ngModel)]="formAuthor" required></textarea>
+                    <textarea class="form-control" id="author"  [(ngModel)]="formAuthor" name="author" required></textarea>
                 </div>
                 <button type="submit" class=" btn  btn-success bnt-block btn-lg">Add Quote</button>
             </form>
